fix section title spacings

--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -41,19 +41,9 @@ div
 
 .section-title
     display: grid
-    place-items: center
+    place-items: start
     max-width: var(--layout-max-width)
-    margin: 0 var(--space-md) var(--space-xs)
-    text-align: center
-
-    @include md
-        place-items: start
-
-    @include lg
-        text-align: left
-
-    @include xl
-        margin-left: 0
+    // margin: 0 var(--space-md) var(--space-xs)
 
 .button
     @include space-squish(27px)
